--- a/nginx.conf
+++ b/nginx.conf
@@ -1,25 +1,18 @@
-server {
-   listen 80;
-   server_name localhost;
+events {
+  worker_connections  1024;
+}
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;
-    }
+http {
 
-#    location /api {
-#        proxy_pass http://172.20.1.216:4000/api;
-#        proxy_http_version 1.1;
-#        proxy_set_header Upgrade $http_upgrade;
-#        proxy_set_header Connection 'upgrade';
-#        proxy_set_header Host $host;
-#        proxy_cache_bypass $http_upgrade;
-#    }
+  include       mime.types;
+  default_type  application/octet-stream;
 
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
+  server {
+      listen 80;
+      server_name localhost;
+
+      root /usr/share/nginx/html;
+      index index.html;
+  }
 }
 
